# AuboAMR300_ROS2

./: .gitmodules  README.md  ros.sh
aubo_bridge/: CMakeLists.txt  package.xml
aubo_bridge/include/aubo_bridge/: bridge_node.hpp
aubo_bridge/launch/: aubo_bridge.launch.py
aubo_bridge/scripts/: aubo_bridge_node.py  robot_controller.py
aubo_bridge/src/: bridge_node.cpp
aubo_bridge_msgs/: CMakeLists.txt  package.xml
seer_description/: CMakeLists.txt  package.xml
seer_description/config/: aubo_controllers.yaml
seer_description/launch/: amr300_display.launch.py  amr_aubo_gazebo.launch.py  bringup.launch.py  bringup_isaac.launch.py  display.launch.py  gazebo.launch.py
seer_description/meshes/: adapter.STL  adapter.blend  adapter.blend1  adapter.stl  back_lidar.stl  front_lidar.stl  gripper_cube.STL  gripper_cube.blend  gripper_cube.blend1  gripper_cube.stl  gripper_stick.STL  gripper_stick.blend  gripper_stick.blend1  gripper_stick.stl  left_wheel.stl  lidar.blend  lidar.blend1  lidar.stl  manipulator_adapter.stl  right_wheel.stl
seer_description/meshes/backup/: left_wheel.stl  right_wheel.stl
seer_description/rviz/: amr300.rviz  base_sim.rviz
seer_description/scripts/: action_bridge.py  circle_move.py  keyboard_teleop.py
seer_description/urdf/: aubo_i16.urdf  composite_robot.urdf  composite_robot.urdf.xacro  composite_robot_isaac.urdf  composite_robot_stick.urdf  composite_robot_stick.urdf.xacro  gemini335L_336L.urdf.xacro  gripper_stick.urdf.xacro  seer_aubo.usd  seer_robot.usd  seer_robot_backup.usd  seer_robot_base.urdf  seer_robot_base.urdf.xacro  seer_robot_new.usd
seer_description/urdf/aubo_i16/: aubo_i16.usd
seer_description/urdf/aubo_i16/configuration/: aubo_i16_base.usd  aubo_i16_physics.usd  aubo_i16_robot.usd  aubo_i16_sensor.usd
seer_description/urdf/composite_robot/: composite_robot.usd
seer_description/urdf/composite_robot/configuration/: composite_robot_physics.usd  composite_robot_sensor.usd
seer_description/urdf/composite_robot_isaac/: composite_robot_isaac.usd
seer_description/urdf/seer_robot_base/: seer_robot_base.usd
(+42 files in other folders)
